<resources>
    <string name="app_name">newProjectApp</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="pay_urfu_ru">• Через электронные платежи УрФУ (pay.urfu.ru) — все максимально просто. Заполняй данные договора и оплачивай онлайн! \n• Также можно воспользоваться приложениями Сбербанка и СКБ Банка. Найди раздел «За общежитие» и следуй инструкциям. \n• Если ты предпочитаешь традиционные способы оплаты, то для тебя есть кассы УрФУ, а также отделения Сбербанка и СКБ. Там сотрудники обязательно помогут с оплатой.</string>
    <string name="fire_rules">В случае пожара: \n• Позвоните в пожарную охрану (по номеру «01», «101» или номеру экстренной службы «112») \n• Также по возможности сообщите о пожаре на пост Управления безопасности (телефон дежурной части университета: 374-36-42) \n• Если объявления о пожаре или эвакуации не было, нажмите на кнопку, находящуюся рядом с лестничным пролетом, для передачи сигнала о начале пожара. \n• Возьмите документы, ценные вещи. Для защиты органов дыхания используйте защитную маску или подручные средства. \n• В случае задымления помещения выбирайтесь пригнувшись или ползком. По возможности накройтесь мокрой тканью (одеялом, полотенцем). \n• Эвакуируйтесь по лестничным площадкам, НЕ используя лифт. Не создавайте заторов и давки на путях эвакуации. \n• После выхода из здания отойдите на некоторое расстояние.</string>
    <string name="fire_text5">• Пользоваться неисправными электроприборами и использовать приборы в несоответствующих им условиях. \n• Пользоваться электронагревательными приборами без установленной на них системы тепловой защиты. \n• Использовать самодельные электроприборы (п. 3.5). \n• Выставлять в коридоры, блоки и на балконы вещи, загромождающие эвакуационные пути и выходы. \n• Хранить моющие средства и инвентарь для уборки в проходах и у выходов (пп. 3.6–3.7). \n• Использовать средства пожаротушения и пожарные краны не по назначению. \n• Заклеивать датчики дыма в комнатах. \nВ случае обнаружения пожара необходимо сообщить о нем в подразделение пожарной охраны (телефон «01», сотовый набор «010», «112»)</string>
    <string name="search_description">Сервис по поиску сожителя на сайте – это надежный помощник в поиске идеального сожителя. Вот несколько преимуществ, которые вы получите, используя наш сервис: \n• Экономия времени и денег \n• Широкий выбор \n• Фильтры и поиск \n• Безопасность \n• Легкий контакт</string>
    <string name="rules_text2">Настоящая инструкция разработана для проживающих в общежитиях Университета. Таковыми считаются лица, которые заключили договор найма жилого помещения в общежитии.
        \n\nПеред заселением в общежитие каждый обязан ознакомиться с общими требованиями безопасности с регистрацией в журнале проведения инструктажа. За нарушение установленного порядка индивид несёт ответственность согласно Правилам внутреннего распорядка обучающихся и Устава университета.
        \n\n• Проживающий не имеет права создавать ситуации угрожающие жизни и здоровью его самого и окружающих.
        \n• Запрещается стоять, передвигаться вдоль стен здания, во избежание попадания под падающие с крыши предметы, лёд, снег.
    \n• Проживающим не разращено становиться ногами, садиться на подоконники, батареи, трубы, а также столы и иное оборудование.
    \n• Запрещается лазить по пожарным лестницам, если это не случай эвакуации.
    \n• Запрещается пользоваться неисправными электрическими приборами, осветительными лампами, холодильниками и другой техникой.
    \n• В общежитиях университета запрещается приносить оружие, колющие, режущие предметы, взрывчатые и огнеопасные вещества.
    \n• При приготовлении пищи на кухне не допускать выкипания жидкости в кастрюле, разбрызгивания жира на сковороде, пользоваться «прихватками» при работе с горячей посудой. Необходимо поддерживать помещение в чистоте.
    \n• Недопустимо употребление наркотических, психотропных, токсических и алкогольных веществ.
    \n• Запрещается приносить в общежитие зловонные, ядовитые, едкие вещества, а также газовые баллончики. Проживающие обязаны соблюдать правила личной гигиены.
    \n• При возникновении любой ситуации, угрожающей жизни и здоровью людей, проживающие обязаны сообщить об этом заведующей общежитием.
    \n• Необходимо знать пути эвакуации из здания (с планами эвакуации можно ознакомиться на каждом этаже), места расположения первичных средств пожаротушения (обозначены специальными знаками безопасности).
    \n• При обнаружении пожара необходимо сообщить в пожарную часть по телефону 01 или 112, на вахту общежитии для включения системы оповещения о пожаре, выйти из здания.
    \n• При эвакуации не стоит создавать панику. После выхода из здания нельзя расходиться, для того чтобы можно было проверить, все ли покинули аварийный объект.
    \n\nПожалуйста, будьте осторожны, не нарушайте вышеизложенные правила!</string>
    <string name="rules_text4">В соответствии с «Правилами внутреннего распорядка в студенческом общежитии» и «Договором найма жилого помещения в общежитии», студент обязан производить уборку жилой комнаты, секций. Вынос мусора ежедневно также является обязанностью проживающего.
        \n\nЗапрещается:
        \nСкладировать мусор в жилых комнатах и в местах общего пользования, в коридорах, на лестничных клетках.
        \n\nРекомендуется:
        \nВыносить мусор в прозрачных или полупрозрачных мешках.
        \nВыносить мешки в определенные пункты сбора мусора (контейнерная площадка на территории студенческого городка).
        \n\nСоблюдайте правила правильного выноса мусора и это не доставит беспокойства ни вам, ни вашим соседям.</string>
    <string name="rules_text6">Закон о тишине в Свердловской области 2022 года определяет, когда свердловчанам можно производить ремонт, сверлить и слушать громкую музыку в квартире в дневное время. \n\nСогласно нормам СанПиН, максимально допустимые значения шума, которые не должны быть превышены: \n• Днем в квартирах – 55 дБ. \n• В дневное время на улице – 70 дБ. \n• В ночное время в многоквартирном доме – 45 дБ. \n• Ночью на улице (во дворе) – 60 дБ. \n\nОбратите внимание: 40—55 дБ примерно соответствуют громкости обычного разговора, 70 дБ — громкому разговору, без перехода на крик. \n\nНиже, согласно законодательству, представлено время, когда шуметь запрещается: \n• В будние дни, кроме вечера пятницы: с 23:00 до 8:00. \n• В выходные и вечер пятницы: с 18:00 до 11:00. \n• Каждый день: с 13:00 до 15:00. \n\nОбратим внимание, что закон действует: \n• на балконах, лестницах и лестничных площадках; \n• на улице (в том числе в скверах, парках); \n• в образовательных, медицинских учреждениях; \n• в торговых зданиях; \n• в 100 метрах от МКД.</string>
    <string name="rules_text_8">Электронные пропуска будут активированы АВТОМАТИЧЕСКИ в течение недели после получения ордера \n\nЕсли пропуск не начнет работать после 15 сентября, то нужно обратиться в бюро пропусков (И-104). Вот что для этого понадобится: \n• студенческий билет; \n• электронный пропуск; \n• ордер; \n• договор с отметкой из общежития.</string>
    <string name="rules_text10">Если пропуск у вас, но пришел в негодность, нужно: \n• подойти в И-104; \n• отдать свой студенческий билет и пропуск; \n• заплатить 130 рублей. \n\nЧто делать, если ваш пропуск перестал быть активным (аннулировался)? \n\nСледует обратиться в И-104. \n\nПри себе необходимо иметь: \n• аннулированный пропуск; \n• студенческий билет; \n• договор найма жилого помещения.</string>
    <string name="rules_text12">После тяжелого учебного дня возвращаешься в общежитие, чтобы поскорее упасть на кровать, подходишь к двери, а она закрыта. Начинаешь искать ключи и понимаешь, что их нигде нет... \n\nЧто же делать? \n• Дождись кого-нибудь из соседей, чтобы поискать ключи в блоке, может быть, ты их оставил там. \n• Если же пропажа так и не нашлась, попроси ключ у соседа и сделай дубликат. \n• Если соседи придут не скоро, обратись к администрации общежития. Тебе могут дать запасные ключи, чтобы открыть дверь и сделать дубликат. После этого запасные ключи необходимо вернуть.</string>
    <string name="rules_text14">Необходимы следующие документы: \n 1. копия или оригинал договора обеспечительного платежа; \n 2. банковские реквизиты; \n 3. заявление, подписанное по адресу: Коминтерна, 11 (паспортный отдел) или С. Ковалевской, 5, каб. Т123а; \n 4. для иностранных студентов – копия паспорта. \n\nЗаявление нужно отнести в бухгалтерию (Ленина, 51, каб. 108 или Мира, 19, каб. М-230). \n\nОбратите внимание: сначала нужно получить в администрации студенческого корпуса справку о сдаче имущества. Она выдается тем, кто уже выселился из общежития. \n\nТакже обеспечительный платеж учитывается обособленно и не является платой за услугу. Чек на сумму обеспечительного платежа не формируется. \n\nВ случаях, когда из обеспечительного платежа удерживается сумма в счет возмещения нанесенного вреда имуществу или возмещения задолженности за проживание в общежитии, на сумму удержания формируется чек и выдается плательщику. \n\nСумма обеспечительного платежа, оставшаяся после удержания в счет возмещения нанесенного вреда имуществу или возмещения задолженности за проживание в общежитии, подлежит возврату плательщику.</string>
    <string name="rules_text16">СООПр – студенческий отряд охраны правопорядка, организация, целью которой является поддержание порядка в общежитиях и на территории университета. \n\nПричины, по которым сотрудники могут проверить блок: \n– шум после 22:00; \n– распитие алкогольных напитков и курение; \n– жалобы от соседей. \n\nНе стоит волноваться, если ничего из перечисленного к вам не относится! \n\nЧто делать? \n\nОткрыть дверь и при необходимости предъявить документы. Вы также можете попросить у сотрудника его удостоверение. В случае его отсутствия вы вправе позвать старшего группы и разрешить с ним все конфликтные ситуации. \n\nТакже сотрудник СООПр имеет право на использование фото-, видео-, аудио- фиксации. В спорных ситуациях наличие записи обхода может быть свидетельством корректного или некорректного поведения и сотрудника, и проживающего. \n\nВ случае проблем и спорных ситуаций вы можете обращаться к ССК.</string>
</resources>