<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F9FF"
    tools:context=".RulesActivity">

    <TextView
        android:id="@+id/rules_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#1E4391"
        android:fontFamily="@font/mont_semibold"
        android:gravity="bottom|center"
        android:padding="16dp"
        android:text="Правила проживания"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageButton
        android:id="@+id/back_button_rules"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#1E4391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded_button"
        app:srcCompat="@drawable/backwards" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:background="#F6F9FF"
        app:layout_constraintBottom_toTopOf="@id/bottom_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rules_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/rules_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mont_semibold"
                android:text="Общие требования безопасности"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rules_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mont_regular"
                android:text="@string/rules_text2"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text1" />

            <TextView
                android:id="@+id/rules_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mont_semibold"
                android:text="Вынос мусора"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text2" />

            <TextView
                android:id="@+id/rules_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mont_regular"
                android:text="@string/rules_text4"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text3" />

            <TextView
                android:id="@+id/rules_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mont_semibold"
                android:text="Закон о тишине"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text4" />

            <TextView
                android:id="@+id/rules_text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mont_regular"
                android:text="@string/rules_text6"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text5" />

            <TextView
                android:id="@+id/rules_text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mont_semibold"
                android:text="Что делать, если после заселения в общежитие не работает электронный пропуск?"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text6" />

            <TextView
                android:id="@+id/rules_text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mont_regular"
                android:text="@string/rules_text_8"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text7" />

            <TextView
                android:id="@+id/rules_text9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mont_semibold"
                android:text="Что делать при поломке/потере пропуска?"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text8" />

            <TextView
                android:id="@+id/rules_text10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mont_regular"
                android:text="@string/rules_text10"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text9" />

            <TextView
                android:id="@+id/rules_text11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mont_semibold"
                android:text="Что делать, если потерял ключи от блока?"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text10" />

            <TextView
                android:id="@+id/rules_text12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mont_regular"
                android:text="@string/rules_text12"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text11" />

            <TextView
                android:id="@+id/rules_text13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mont_semibold"
                android:text="Как вернуть обеспечительный платеж?"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text12" />

            <TextView
                android:id="@+id/rules_text14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mont_regular"
                android:text="@string/rules_text14"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text13" />

            <TextView
                android:id="@+id/rules_text15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mont_semibold"
                android:text="Что делать, если стучится СООПр?"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text14" />

            <TextView
                android:id="@+id/rules_text16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mont_regular"
                android:text="@string/rules_text16"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="top"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="0sp"
                android:translationY="-0.16sp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rules_text15" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Button 1 -->
        <ImageButton
            android:id="@+id/house_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="42dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/house_icon"
            app:layout_constraintEnd_toStartOf="@id/paid_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Button 2 -->
        <ImageButton
            android:id="@+id/paid_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="42dp"
            android:clickable="false"
            android:backgroundTint="@color/white"
            android:src="@drawable/paid_icon"
            app:layout_constraintEnd_toStartOf="@id/menu_button"
            app:layout_constraintStart_toEndOf="@id/house_button"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Button 3 -->
        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#1E4391"
            android:src="@drawable/menu_icon"
            android:background="@drawable/rounded_button"
            app:layout_constraintEnd_toStartOf="@id/search_button"
            app:layout_constraintStart_toEndOf="@id/paid_button"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Button 4 -->
        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="42dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/search_icon"
            app:layout_constraintEnd_toStartOf="@id/settings_button"
            app:layout_constraintStart_toEndOf="@id/menu_button"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Button 5 -->
        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="42dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/settings_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>